
    HADOOP-7729. Send back valid HTTP response if user hits IPC port with
    HTTP GET. (todd)

    HADOOP-7758. Make GlobFilter class public. (tucu)

    HADOOP-7728. Enable task memory management to be configurable in hadoop
    config setup script. (ramya)

    HADOOP-7424. Log an error if the topology script doesn't handle multiple args.
    (Uma Maheswara Rao G via eli)

  BUGS

    HADOOP-7606. Upgrade Jackson to version 1.7.1 to match the version required
    by Jersey (Alejandro Abdelnur via atm)

    HADOOP-7610. Fix for hadoop debian package (Eric Yang via gkesavan)

    HADOOP-7641. Add Apache License to template config files.
    (Eric Yang via atm)

    HADOOP-7621. alfredo config should be in a file not readable by users
    (Alejandro Abdelnur via atm)
    
    HADOOP-7669  Fix newly introduced release audit warning. 
    (Uma Maheswara Rao G via stevel)
    
    HADOOP-6220. HttpServer wraps InterruptedExceptions by IOExceptions 
    if interrupted in startup (stevel)

    HADOOP-7703. Improved exception handling of shutting down web server.
    (Devaraj K via Eric Yang)

    HADOOP-7704. Reduce number of object created by JMXJsonServlet.
    (Devaraj K via Eric Yang)

    HADOOP-7695. RPC.stopProxy can throw unintended exception while logging
    error (atm)

    HADOOP-7769. TestJMXJsonServlet is failing. (tomwhite)

    HADOOP-7770. ViewFS getFileChecksum throws FileNotFoundException for files in 
    /tmp and /user. (Ravi Prakash via jitendra)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-7773. Add support for protocol buffer based RPC engine.
    (suresh)

Release 0.23.0 - 2011-11-01 

  INCOMPATIBLE CHANGES

   HADOOP-6904. Support method based RPC compatiblity. (hairong)

   HADOOP-6432. Add Statistics support in FileContext. (jitendra)

   HADOOP-7136. Remove failmon contrib component. (nigel)

  NEW FEATURES

    HADOOP-7324. Ganglia plugins for metrics v2. (Priyo Mustafi via llu)
